content/classes/2.4/WebVRFreeCamera.md
---
ID_PAGE: 25139
PG_TITLE: WebVRFreeCamera
PG_VERSION: 2.1
TAGS:
    - Node
    - Camera
    - TargetCamera
    - FreeCamera
---
## Description

class [WebVRFreeCamera](/classes/2.4/WebVRFreeCamera) extends [FreeCamera](/classes/2.4/FreeCamera)



## Constructor

## new [WebVRFreeCamera](/classes/2.4/WebVRFreeCamera)(name, position, scene, compensateDistortion)



#### Parameters
 | Name | Type | Description
---|---|---|---
 | name | string |    
 | position | [Vector3](/classes/2.4/Vector3) |    
 | scene | [Scene](/classes/2.4/Scene) |    
## Methods

### attachControl(element, noPreventDefault) &rarr; void



#### Parameters
 | Name | Type | Description
---|---|---|---
 | element | HTMLElement |    
optional | noPreventDefault | boolean |    
### detachControl(element) &rarr; void



#### Parameters
 | Name | Type | Description
---|---|---|---
 | element | HTMLElement |    

### requestVRFullscreen(requestPointerlock) &rarr; void



#### Parameters
 | Name | Type | Description
---|---|---|---
 | requestPointerlock | boolean | 

### getTypeName() &rarr; string


